# discuss-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  discuss.html  feedback.html  install.sh  llms.txt  notes.md
.github/workflows/: release.yml
assets/: discuss-v2.html  mermaid-shim.js
docs/plans/: document-editing.md  enter-to-send.md  live-block-editing.md
scripts/ralph/: .last-branch  prd.json  progress.txt  ralph.sh
skills/discuss/: SKILL.md  manifest.txt  poller.sh
src/: assets.rs  blocks.rs  cli.rs  config.rs  diff.rs  error.rs  events.rs  exit.rs  history.rs  launch.rs  lib.rs  logging.rs  render.rs  server.rs  sse.rs  state.rs  template.rs  transcript.rs  update.rs  verdict.rs
src/state/: mod.rs  store.rs  types.rs
tasks/: prd-discuss-cli.md
tests/: cli.rs  logging.rs  server.rs
