[package]
name = "discuss"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for live bidirectional markdown review sessions."
repository = "https://github.com/chrisraethke/discuss-cli"
license = "MIT"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
comrak = { version = "0.52.0", default-features = false }
directories = "6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.8.23"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
